Links created between pages, and some words changes to French

--- a/templates/franchise/new.html.twig
+++ b/templates/franchise/new.html.twig
@@ -3,9 +3,10 @@
 {% block title %}New Franchise{% endblock %}
 
 {% block body %}
-    <h1>Create new Franchise</h1>
+    <h1>Nouvelle Franchise</h1>
 
     {{ include('franchise/_form.html.twig') }}
 
-    <a href="{{ path('app_franchise_index') }}">back to list</a>
+    <br />
+    <a href="{{ path('app_franchise_index') }}">Liste de Franchises</a>
 {% endblock %}
