--- a/templates/partner/new.html.twig
+++ b/templates/partner/new.html.twig
@@ -3,9 +3,9 @@
 {% block title %}New Partner{% endblock %}
 
 {% block body %}
-    <h1>Create new Partner</h1>
+    <h1>Nouvelle Structure</h1>
 
     {{ include('partner/_form.html.twig') }}
 
-    <a href="{{ path('app_partner_index') }}">back to list</a>
+    <a href="{{ path('app_partner_index') }}">Liste des Structures</a>
 {% endblock %}
