--- a/templates/franchise/index.html.twig
+++ b/templates/franchise/index.html.twig
@@ -13,7 +13,7 @@
                 <th>Email</th>
                 <th>Permissions</th>
                 <th>Active</th>
-                <th>actions</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -32,8 +32,8 @@
                 </td>
                 <td>{{ franchise.Active ? 'Yes' : 'No' }}</td>
                 <td>
-                    <a href="{{ path('app_franchise_show', {'id': franchise.id}) }}">show</a>
-                    <a href="{{ path('app_franchise_edit', {'id': franchise.id}) }}">edit</a>
+                    <a href="{{ path('app_franchise_show', {'id': franchise.id}) }}">Voir plus</a>
+                    <a href="{{ path('app_franchise_edit', {'id': franchise.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
@@ -44,5 +44,12 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_franchise_new') }}">Create new</a>
+    <br />
+    <a href="{{ path('app_franchise_new') }}">Ajouter une nouvelle Franchise</a>
+    <br />
+    <a href="{{ path('app_partner_index') }}">Liste des Structures</a>
+    <br />
+    <a href="{{ path('app_home') }}">Page d'accueil</a>
+    <br /> 
+
 {% endblock %}
