--- a/templates/partner/index.html.twig
+++ b/templates/partner/index.html.twig
@@ -14,7 +14,7 @@
                 <th>Address</th>
                 <th>Permissions</th>
                 <th>Active</th>
-                <th>actions</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -34,8 +34,8 @@
                 </td>
                 <td>{{ partner.Active ? 'Yes' : 'No' }}</td>
                 <td>
-                    <a href="{{ path('app_partner_show', {'id': partner.id}) }}">show</a>
-                    <a href="{{ path('app_partner_edit', {'id': partner.id}) }}">edit</a>
+                    <a href="{{ path('app_partner_show', {'id': partner.id}) }}">Voir plus</a>
+                    <a href="{{ path('app_partner_edit', {'id': partner.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
@@ -45,6 +45,12 @@
         {% endfor %}
         </tbody>
     </table>
+    <br />
+    <a href="{{ path('app_partner_new') }}">Ajouter une nouvelle Structure</a>
+    <br />
+    <a href="{{ path('app_franchise_index') }}">Liste de Franchises</a>
+    <br />
+    <a href="{{ path('app_home') }}">Page d'accueil</a>
+    <br />
 
-    <a href="{{ path('app_partner_new') }}">Create new</a>
 {% endblock %}
