--- a/templates/partner/show.html.twig
+++ b/templates/partner/show.html.twig
@@ -39,10 +39,12 @@
 
         </tbody>
     </table>
-
-    <a href="{{ path('app_partner_index') }}">back to list</a>
-
-    <a href="{{ path('app_partner_edit', {'id': partner.id}) }}">edit</a>
+    
+    <br />
+    <a href="{{ path('app_partner_index') }}">Liste des Structures</a>
+    <br />
+    <a href="{{ path('app_partner_edit', {'id': partner.id}) }}">Modifier</a>
+    <br />
 
     {{ include('partner/_delete_form.html.twig') }}
 {% endblock %}
