Home references changed to Dashboard

--- a/templates/partner/index.html.twig
+++ b/templates/partner/index.html.twig
@@ -50,7 +50,7 @@
     <br />
     <a href="{{ path('app_franchise_index') }}">Liste de Franchises</a>
     <br />
-    <a href="{{ path('app_home') }}">Page d'accueil</a>
+    <a href="{{ path('app_dashboard') }}">Page d'accueil</a>
     <br />
 
 {% endblock %}
