--- a/templates/franchise/index.html.twig
+++ b/templates/franchise/index.html.twig
@@ -49,7 +49,7 @@
     <br />
     <a href="{{ path('app_partner_index') }}">Liste des Structures</a>
     <br />
-    <a href="{{ path('app_home') }}">Page d'accueil</a>
+    <a href="{{ path('app_dashboard') }}">Page d'accueil</a>
     <br /> 
 
 {% endblock %}
