--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,7 @@
         {% endblock %}
     </head>
     <body>
+        {{ include('_nav.html.twig') }}
         {% block body %}{% endblock %}
     </body>
 </html>
