Filter css modified for Franchises index

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,11 @@
             
           }
 
+          .filter-active .th-inner{
+            display: none;
+            background-color: red;
+          }
+
           .table-header{
             background-color: orange;
           }
