Navbar Icon menu on desktop. Section container in base.html added. Tables configured as responsive in index files

--- a/templates/franchise/index.html.twig
+++ b/templates/franchise/index.html.twig
@@ -4,45 +4,46 @@
 
 {% block body %}
     <h1>Franchise index</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Permissions</th>
-                <th>Active</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for franchise in franchises %}
-            <tr>
-                <td>{{ franchise.id }}</td>
-                <td>{{ franchise.Name }}</td>
-                <td>{{ franchise.Email }}</td>
-                <td>
-                  <span>
-                  {% for permission in franchise.permissions %}
-                    | {{ permission.name }} </span>
-                  {% endfor %}
-                  |
-                  </span>
-                </td>
-                <td>{{ franchise.Active ? 'Yes' : 'No' }}</td>
-                <td>
-                    <a href="{{ path('app_franchise_show', {'id': franchise.id}) }}">Voir plus</a>
-                    <a href="{{ path('app_franchise_edit', {'id': franchise.id}) }}">Modifier</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="5">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <div class="table-responsive">
+      <table class="table">
+          <thead>
+              <tr>
+                  <th>Id</th>
+                  <th>Name</th>
+                  <th>Email</th>
+                  <th>Permissions</th>
+                  <th>Active</th>
+                  <th>Actions</th>
+              </tr>
+          </thead>
+          <tbody>
+          {% for franchise in franchises %}
+              <tr>
+                  <td>{{ franchise.id }}</td>
+                  <td>{{ franchise.Name }}</td>
+                  <td>{{ franchise.Email }}</td>
+                  <td>
+                    <span>
+                    {% for permission in franchise.permissions %}
+                      | {{ permission.name }} </span>
+                    {% endfor %}
+                    |
+                    </span>
+                  </td>
+                  <td>{{ franchise.Active ? 'Yes' : 'No' }}</td>
+                  <td>
+                      <a href="{{ path('app_franchise_show', {'id': franchise.id}) }}">Voir plus</a>
+                      <a href="{{ path('app_franchise_edit', {'id': franchise.id}) }}">Modifier</a>
+                  </td>
+              </tr>
+          {% else %}
+              <tr>
+                  <td colspan="5">no records found</td>
+              </tr>
+          {% endfor %}
+          </tbody>
+      </table>
+    </div>
 
     <br />
     <a href="{{ path('app_franchise_new') }}">Ajouter une nouvelle Franchise</a>
