--- a/templates/_nav.html.twig
+++ b/templates/_nav.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg bg-primary">
   <div class="container-fluid">
     <a class="navbar-brand" href="{{ path('app_dashboard') }}">Today Fit</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,10 +19,10 @@
         </ul>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item dropdown">
-            <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="bi bi-person-circle mx-2 text-primary" style="font-size: 2rem;"></i>
-            </a>
-            <ul class="dropdown-menu">
+              <button type="button" class="btn btn-link nav-link py-2 px-0 px-lg-2 dropdown-toggle show" data-bs-toggle="dropdown" aria-expanded="true" data-bs-display="static">
+              <i class="bi bi-person-circle mx-2 text-dark" style="font-size: 2rem;"></i>
+            </button>
+            <ul class="dropdown-menu dropdown-menu-end" data-bs-popper="static">
               <li><a class="dropdown-item" href="#">Login</a></li>
               <li><a class="dropdown-item" href="#">User Dashboard</a></li>
             </ul>
