--- a/templates/permission/index.html.twig
+++ b/templates/permission/index.html.twig
@@ -4,33 +4,33 @@
 
 {% block body %}
     <h1>Permission index</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for permission in permissions %}
-            <tr>
-                <td>{{ permission.id }}</td>
-                <td>{{ permission.name }}</td>
-                <td>
-                    <a href="{{ path('app_permission_show', {'id': permission.id}) }}">show</a>
-                    <a href="{{ path('app_permission_edit', {'id': permission.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="3">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
+    <div class="table-responsive">
+      <table class="table">
+          <thead>
+              <tr>
+                  <th>Id</th>
+                  <th>Name</th>
+                  <th>actions</th>
+              </tr>
+          </thead>
+          <tbody>
+          {% for permission in permissions %}
+              <tr>
+                  <td>{{ permission.id }}</td>
+                  <td>{{ permission.name }}</td>
+                  <td>
+                      <a href="{{ path('app_permission_show', {'id': permission.id}) }}">show</a>
+                      <a href="{{ path('app_permission_edit', {'id': permission.id}) }}">edit</a>
+                  </td>
+              </tr>
+          {% else %}
+              <tr>
+                  <td colspan="3">no records found</td>
+              </tr>
+          {% endfor %}
+          </tbody>
+      </table>
+    </div>
     <br />
     <a href="{{ path('app_permission_new') }}">Create new</a>
     <br />
