--- a/templates/_nav.html.twig
+++ b/templates/_nav.html.twig
@@ -4,22 +4,21 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class=" d-flex justify-content-between">
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{ path('app_franchise_index') }}">Franchises</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="{{ path('app_partner_index') }}">Structures</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="{{ path('app_permission_index') }}">Permissions</a>
-          </li>
-        </ul>
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{{ path('app_franchise_index') }}">Franchises</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="{{ path('app_partner_index') }}">Structures</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="{{ path('app_permission_index') }}">Permissions</a>
+        </li>
+      </ul>
+        <ul class="navbar-nav mb-2 mb-lg-0">
           <li class="nav-item dropdown">
-              <button type="button" class="btn btn-link nav-link py-2 px-0 px-lg-2 dropdown-toggle show" data-bs-toggle="dropdown" aria-expanded="true" data-bs-display="static">
+            <button type="button" class="btn btn-link nav-link py-2 px-0 px-lg-2 dropdown-toggle show" data-bs-toggle="dropdown" aria-expanded="true" data-bs-display="static">
               <i class="bi bi-person-circle mx-2 text-dark" style="font-size: 2rem;"></i>
             </button>
             <ul class="dropdown-menu dropdown-menu-end" data-bs-popper="static">
@@ -28,7 +27,6 @@
             </ul>
           </li>
         </ul>
-      </div>
     </div>
   </div>
 </nav>
