--- a/templates/franchise/new.html.twig
+++ b/templates/franchise/new.html.twig
@@ -8,5 +8,5 @@
     {{ include('franchise/_form.html.twig') }}
 
     <br />
-    <a href="{{ path('app_franchise_index') }}">Liste de Franchises</a>
+    <a href="{{ path('app_franchise_index') }}"  class="my-3 btn btn-outline-primary">Liste de Franchises</a>
 {% endblock %}
