--- a/templates/permission/new.html.twig
+++ b/templates/permission/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('permission/_form.html.twig') }}
 
-    <a href="{{ path('app_permission_index') }}">back to list</a>
+    <a href="{{ path('app_permission_index') }}" class="my-3 btn btn-outline-primary">back to list</a>
 {% endblock %}
