--- a/templates/franchise/index.html.twig
+++ b/templates/franchise/index.html.twig
@@ -3,56 +3,84 @@
 {% block title %}Franchise index{% endblock %}
 
 {% block body %}
-    <h1>Franchise index</h1>
-    <div class="table-responsive">
-      <table class="table">
-          <thead>
-              <tr>
-                  <th>Id</th>
-                  <th>Name</th>
-                  <th>Email</th>
-                  <th>Permissions</th>
-                  <th>Active</th>
-                  <th>Actions</th>
-              </tr>
-          </thead>
-          <tbody>
-          {% for franchise in franchises %}
-              <tr>
-                  <td>{{ franchise.id }}</td>
-                  <td>{{ franchise.Name }}</td>
-                  <td>{{ franchise.Email }}</td>
-                  <td>
-                    <span>
-                    {% for permission in franchise.permissions %}
-                      | {{ permission.name }} </span>
-                    {% endfor %}
-                    |
-                    </span>
-                  </td>
-                  <td>{{ franchise.Active ? 'Yes' : 'No' }}</td>
-                  <td>
-                      <a href="{{ path('app_franchise_show', {'id': franchise.id}) }}">Voir plus</a>
-                      <a href="{{ path('app_franchise_edit', {'id': franchise.id}) }}">Modifier</a>
-                  </td>
-              </tr>
-          {% else %}
-              <tr>
-                  <td colspan="5">no records found</td>
-              </tr>
-          {% endfor %}
-          </tbody>
-      </table>
-    </div>
-
-    <br />
-    <a href="{{ path('app_franchise_new') }}">Ajouter une nouvelle Franchise</a>
-    <br />
-    <a href="{{ path('app_partner_index') }}">Liste des Structures</a>
-    <br />
-    <a href="{{ path('app_permission_index') }}">Liste de Permissions</a>
-    <br />
-    <a href="{{ path('app_dashboard') }}">Page d'accueil</a>
-    <br /> 
+    <section class="d-flex flex-row justify-content-between align-items-center">
+      <h1>Franchisés</h1>
+      <a href="{{ path('app_franchise_new') }}" class="btn btn-danger">Nouvelle Franchise</a>
+    </section>
+    <section class="container-fluid">
+      <ul class="nav nav-tabs mt-3" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+          <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Accueil</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Vue en table</button>
+        </li>
+      </ul>
+      <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
+            <section>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+                {% for franchise in franchises %}
+          <div class="col">
+            <div class="card h-100">
+              <img src="https://images.pexels.com/photos/7676548/pexels-photo-7676548.jpeg" class="card-img-top" alt="today fit">
+              <div class="card-body">
+                <small>#{{ franchise.id }}</small>
+                <h5 class="card-title">{{ franchise.Name }}</h5>
+                <p class="card-text">{{ franchise.Email }}</p>
+                <a href="{{ path('app_franchise_edit', {'id': franchise.id}) }}" class="btn btn-primary">Modifier</a>
+              </div>
+                <div class="card-footer">
+                  <small class="text-muted">Franchisé depuis le 25/05/2016</small>
+                </div>
+            </div>
+          </div>
+        {% endfor %}
+        </div>
+        </div>
+        </section>
+        <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
+            <section class="table-responsive">
+              <table class="table">
+                  <thead>
+                      <tr>
+                          <th>Id</th>
+                          <th>Name</th>
+                          <th>Email</th>
+                          <th>Permissions</th>
+                          <th>Active</th>
+                          <th>Actions</th>
+                      </tr>
+                  </thead>
+                  <tbody>
+                  {% for franchise in franchises %}
+                      <tr>
+                          <td>{{ franchise.id }}</td>
+                          <td>{{ franchise.Name }}</td>
+                          <td>{{ franchise.Email }}</td>
+                          <td>
+                            {% for permission in franchise.permissions %}
+                              <span class="btn btn-sm btn-warning">{{ permission.name }}</span>
+                            {% endfor %}
+                          </td>
+                          <td>{{ franchise.Active ? 'Yes' : 'No' }}</td>
+                          <td>
+                              <a href="{{ path('app_franchise_show', {'id': franchise.id}) }}">Voir plus</a>
+                              <a href="{{ path('app_franchise_edit', {'id': franchise.id}) }}">Modifier</a>
+                          </td>
+                      </tr>
+                  {% else %}
+                      <tr>
+                          <td colspan="5">no records found</td>
+                      </tr>
+                  {% endfor %}
+                  </tbody>
+              </table>
+            </section>
+        </div>
+        <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">...</div>
+        <div class="tab-pane fade" id="disabled-tab-pane" role="tabpanel" aria-labelledby="disabled-tab" tabindex="0">...</div>
+      </div>
+    </section>
 
 {% endblock %}
