--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -9,6 +9,16 @@
 </style>
 
   <div class="container mt-5">
-    <h1>Admin Dashboard</h1>
+    <h1>Admin Dashboard - Unauthenticated user</h1>
+    <a href="{{ path('app_admin') }}">Admin Area</a>
+    <p>
+      {% if app.user %}
+        <div class="mb-3">
+            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+        </div>
+      {% else %}
+        No user found
+      {% endif %}
+    </p>
   </div>
 {% endblock %}
