Update email template after register + comment security path on security.yaml + some rout es protection commented in controllers

--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -1,7 +1,9 @@
 <h1>Hi! Please confirm your email!</h1>
 
 <p>
-    Please confirm your email address by clicking the following link: <br><br>
+    Please confirm your email address by clicking the following link and usign the follow information for Login: <br><br>
+    <p>User: {{ user.email }}</p>
+    <p>Password: 123456</p>
     <a href="{{ signedUrl }}">Confirm my Email</a>.
     This link will expire in {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
 </p>
