--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -35,5 +35,6 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_user_new') }}">Create new</a>
+    <a href="{{ path('app_register') }}" class="btn btn-outline-warning">Registrer nouvel utilisateur</a>
+
 {% endblock %}
