--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -24,7 +24,7 @@
            value="{{ csrf_token('authenticate') }}"
     >
 
-    {#
+    {# 
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
         See https://symfony.com/doc/current/security/remember_me.html
 
@@ -33,10 +33,14 @@
                 <input type="checkbox" name="_remember_me"> Remember me
             </label>
         </div>
-    #}
+    #} 
 
     <button class="btn btn-lg btn-primary" type="submit">
         Sign in
     </button>
 </form>
+
+<a href="{{ path('app_forgot_password_request') }}">J'ai oublié mon mot de pass</a>
+
+
 {% endblock %}
