Password Reset field added to User Entity, User Form and User Index view update with functionality in controllers + redirect to website html template created

--- a/templates/reset_password/please_reset_password.html.twig
+++ b/templates/reset_password/please_reset_password.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Email Verification{% endblock %}
+{% block title %}Reset Password{% endblock %}
 
 {% block body %}
 <div class="example-wrapper">
