Site demonstration text included in top of the navbar

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -47,6 +47,7 @@
         </style>
     </head>
     <body>
+        <div class="container-fluid bg-warning text-center py-1"><i>Ce site web est une site de démonstration</i></div>
         {{ include('_nav.html.twig') }}
         <section class="container mt-3">
             {% block body %}{% endblock %}
