Footer implemented fixed to the bottom of the page

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -52,5 +52,6 @@
         <section class="container mt-3">
             {% block body %}{% endblock %}
         </section>
+        {{ include('_footer.html.twig') }}
     </body>
 </html>
