--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -1,10 +1,8 @@
-<footer class="py-3 container-fluid bg-light">
-  <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+<footer class="pt-2 container-fluid bg-light">
+  <ul class="nav justify-content-center border-bottom pb-2 mb-2">
+    <li class="nav-item"><a href="{{ path('app_dashboard') }}" class="nav-link px-2 text-muted">Accueil</a></li>
+    <li class="nav-item"><a href="{{ path('app_login') }}" class="nav-link px-2 text-muted">Login</a></li>
     <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
   </ul>
-  <p class="text-center text-muted">© 2022 Company, Inc</p>
+  <p class="text-center text-muted">© 2022 TodayFit</p>
 </footer>
