--- a/templates/_nav.html.twig
+++ b/templates/_nav.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-primary">
+<nav class="navbar navbar-expand-lg bg-primary px-5">
   <div class="container-fluid">
     <a class="navbar-brand" href="{{ path('app_dashboard') }}">Today Fit</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,7 +16,7 @@
           <a class="nav-link active" href="{{ path('app_permission_index') }}">Permissions</a>
         </li>
       </ul>
-      <ul class="navbar-nav mb-2 mb-lg-0">
+      <ul class="navbar-nav mb-2 mb-lg-0 align-items-center">
         <li class="nav-item dropdown">
           {{ app.user ? app.user.userIdentifier : 'Please Login' }}
         </li>
@@ -32,7 +32,6 @@
             {% else %}
               <li><a href="{{ path('app_login') }}" class="dropdown-item">Login</a></li>
             {% endif %}
-            
           </ul>
         </li>
       </ul>
