Link to public Website added in footer

--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -3,6 +3,7 @@
     <li class="nav-item"><a href="{{ path('app_dashboard') }}" class="nav-link px-2 text-muted">Accueil</a></li>
     <li class="nav-item"><a href="{{ path('app_login') }}" class="nav-link px-2 text-muted">Login</a></li>
     <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+    <li class="nav-item"><a href="https://www.todayfit.fr" class="nav-link px-2 text-muted">Public Website</a></li>
   </ul>
   <p class="text-center text-muted">© 2022 TodayFit</p>
 </footer>
