--- a/templates/reset_password/reset_password.html.twig
+++ b/templates/reset_password/reset_password.html.twig
@@ -3,9 +3,9 @@
 {% block title %}Email Verification{% endblock %}
 
 {% block body %}
-<div class="example-wrapper">
-    <h1>Please Reset your Password</h1>
+<section class="container col-md-8 col-xl-6 bg-light py-5 px-4 custom-form">
+    <h1>Please Reset your Passwords</h1>
     <p>Click here for password reset after first Login</p>
     <a href="/reset-password">Reset Password</a>
-</div>
+</section>
 {% endblock %}
