--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -6,16 +6,17 @@
     {% for flash_error in app.flashes('verify_email_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
+    <section class="container col-md-8 col-xl-6 bg-light py-5 px-4 custom-form">
+      <h1>Registrer un nouvel utilisateur</h1>
 
-    <h1>Registrer un nouvel utilisateur</h1>
+      {{ form_start(registrationForm) }}
+          {{ form_row(registrationForm.email) }}
+          {{ form_row(registrationForm.plainPassword, {
+              label: 'Mot de passe'
+          }) }}
+          {{ form_row(registrationForm.agreeTerms) }}
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
-
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+          <button type="submit" class="btn btn-warning">Registrer</button>
+      {{ form_end(registrationForm) }}
+    </section>
 {% endblock %}
