--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -3,10 +3,12 @@
 {% block title %}Reset your password{% endblock %}
 
 {% block body %}
+<section class="container col-md-8 col-xl-6 bg-light py-5 px-4 custom-form">
     <h1>Reset your password</h1>
 
     {{ form_start(resetForm) }}
         {{ form_row(resetForm.plainPassword) }}
         <button class="btn btn-primary">Reset password</button>
     {{ form_end(resetForm) }}
+</section>
 {% endblock %}
