--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -6,5 +6,5 @@
     <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Sitemap</a></li>
     <li class="nav-item"><a href="https://www.todayfit.fr" class="nav-link px-2 text-muted">Public Website</a></li>
   </ul>
-  <p class="text-center text-muted">© 2022 TodayFit (Ce site est une démonstration)</p>
+  <p class="text-center text-muted">© 2022 TodayFit</p>
 </footer>
