--- a/templates/registration/redirect_to_website.html.twig
+++ b/templates/registration/redirect_to_website.html.twig
@@ -3,14 +3,18 @@
 {% block title %}Email Verification{% endblock %}
 
 {% block body %}
-<div class="example-wrapper">
+<section class="container bg-light p-5 text-center">
 
     {% if app.user %}
-      <h1>Email Verification Successful</h1>
-      <p>Thank you. You have confirmed your email.Please visit the website here and Login with your email: {{ app.user.userIdentifier }}</p>
+    <div class="text-center mb-3">
+      <h1>Votre adresse e-mail a été vérifiée!</h1>
+      <h2>Merci et bienvenue dans la famille TODAYFIT</h2>
+    </div>
+    <p>Vous pouvez desormais accèder à votre panneau d'administration avec votre nouveau mot de passe et votre e-mail: {{ app.user.userIdentifier }}</p>
     {% else %}
-      <p>Please Login</p>
+      <p>Vous n'êtes pas connecté</p>
+      <a href="{{ path('app_login') }}" class="dropdown-item">Login</a>
     {% endif %}
-    <a href="http://www.juanjosemora.es">Website</p>
-</div>
+    <a href="http://www.juanjosemora.es" class="btn btn-success">Acceder au site web</a>
+</section>
 {% endblock %}
