--- a/templates/reset_password/please_reset_password.html.twig
+++ b/templates/reset_password/please_reset_password.html.twig
@@ -4,8 +4,8 @@
 
 {% block body %}
 <section class="container col-md-8 col-xl-6 bg-light py-5 px-4 custom-form">
-    <h1>Please Reset your Passwords</h1>
-    <p>Click here for password reset after first Login</p>
-    <a href="/reset-password">Reset Password</a>
+    <h1>S'il vous plaît, modifiez votre mot de passe</h1>
+    <p>Pour acceder à la page vous devez personaliser votre mot de passe. Clickez ici pour modifier votre mot de passe lors de votre premier connexion</p>
+    <a href="/reset-password">Modifier mon Mot de Passe</a>
 </section>
 {% endblock %}
