--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -3,9 +3,14 @@
 {% block title %}Password Reset Email Sent{% endblock %}
 
 {% block body %}
-    <p>
-        If an account matching your email exists, then an email was just sent that contains a link that you can use to reset your password.
-        This link will expire in {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.
-    </p>
-    <p>If you don't receive an email please check your spam folder or <a href="{{ path('app_forgot_password_request') }}">try again</a>.</p>
+    <section class="container bg-light p-5">
+      <p>
+          Si une compte correspondant à votre adresse e-mail existe, un e-mail vient de vous être envoyé contenant un lien que vous pouvez utiliser
+          pour réinitialiser votre mot de passe.
+      </p>
+      <p>
+        Le lien expirera dans {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.
+      </p>
+      <p>Si vous ne recevez pas d'e-mail, veuillew vérifier votre dossier spam ou <a href="{{ path('app_forgot_password_request') }}">réesayez ici</a>.</p>
+    </section>
 {% endblock %}
