--- a/templates/reset_password/email.html.twig
+++ b/templates/reset_password/email.html.twig
@@ -1,9 +1,10 @@
-<h1>Hi!</h1>
+<h1>Réinitialisez votre mot de passe</h1>
 
-<p>To reset your password, please visit the following link</p>
+<p>Pour réinitialiser votre mot de passe, visiter le lien</p>
 
 <a href="{{ url('app_reset_password', {token: resetToken.token}) }}">{{ url('app_reset_password', {token: resetToken.token}) }}</a>
 
-<p>This link will expire in {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.</p>
+{# <p>Le lien expirera en {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.</p> #}
+<p>Le lien expirera en 48 heures.</p>
 
-<p>Cheers!</p>
+<p>Merci!</p>
