--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -7,18 +7,17 @@
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
     <section class="container col-md-8 col-xl-6 bg-light py-5 px-4 custom-form">
-        <h1>Reset your password</h1>
+        <h1>Réinitialisez votre mot de passe</h1>
 
         {{ form_start(requestForm) }}
             {{ form_row(requestForm.email) }}
             <div>
                 <small>
-                    Enter your email address and we will send you a
-                    link to reset your password.
+                    Entrez votre adresse e-mail et nous vous enverrons un lien pour réinitialiser votre mot de passe
                 </small>
             </div>
 
-            <button class="btn btn-primary">Send password reset email</button>
+            <button class="btn btn-primary">Envoyer e-mail</button>
         {{ form_end(requestForm) }}
     </section>
 {% endblock %}
