--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -4,11 +4,11 @@
 
 {% block body %}
 <section class="container col-md-8 col-xl-6 bg-light py-5 px-4 custom-form">
-    <h1>Reset your password</h1>
+    <h1>Réinitialisez votre Mot de Passe</h1>
 
     {{ form_start(resetForm) }}
         {{ form_row(resetForm.plainPassword) }}
-        <button class="btn btn-primary">Reset password</button>
+        <button class="btn btn-primary">Réinitialisez le mot de passe</button>
     {{ form_end(resetForm) }}
 </section>
 {% endblock %}
