--- a/templates/reset_password/please_reset_password.html.twig
+++ b/templates/reset_password/please_reset_password.html.twig
@@ -6,6 +6,6 @@
 <section class="container col-md-8 col-xl-6 bg-light py-5 px-4 custom-form">
     <h1>S'il vous plaît, modifiez votre mot de passe</h1>
     <p>Pour acceder à la page vous devez personaliser votre mot de passe. Clickez ici pour modifier votre mot de passe lors de votre premier connexion</p>
-    <a href="/reset-password">Modifier mon Mot de Passe</a>
+    <a href="/reset-password" class="btn btn-outline-success">Modifier mon Mot de Passe</a>
 </section>
 {% endblock %}
